# sky.pro-pd8-sim-28.1.12

./: pyproject.toml  requirements.txt
my_project_part_1/along_neva_channels/: models.py  tests.py  urls.py  views.py
my_project_part_1/along_neva_channels/migrations/: 0002_alter_tour_ends_at.py  0003_tour_author_alter_tour_starts_at.py  0004_remove_tour_author.py
my_project_part_1/discounts/: models.py  urls.py  views.py
my_project_part_1/discounts/migrations/: 0001_initial.py  0002_alter_discount_ends_at_alter_discount_starts_at.py  0003_alter_discount_tour.py
my_project_part_1/edits/: models.py
my_project_part_1/edits/migrations/: 0001_initial.py  0002_alter_tour_price_rur.py
my_project_part_1/feedback/: tests.py  urls.py  views.py
my_project_part_1/forgotten/: tests.py  urls.py  views.py
my_project_part_1/moderation/: urls.py  views.py
my_project_part_1/my_project/: urls.py
my_project_part_1/tours/: models.py
my_project_part_1/tours/migrations/: 0002_review_author_review_content_review_is_published_and_more.py  0003_alter_review_published_at.py
my_project_part_2/alphabet/migrations/: 0002_alter_city_options.py
my_project_part_2/counting_rhyme/: views.py
my_project_part_2/first_opened/: views.py
my_project_part_2/my_project/: settings.py
my_project_part_2/new_horizonts/: views.py
my_project_part_2/pages/: views.py
my_project_part_2/reforms/: models.py  views.py
my_project_part_2/users_geography/: models.py  views.py
my_project_part_2/users_geography/migrations/: 0002_alter_user_city.py  0003_alter_city_options.py  (+1 more)
