[tool.poetry]
name = "sky-pro-pd8-sim-28-1-12"
version = "0.1.0"
description = ""
authors = ["grm <golosov_SA@mail.ru>"]
readme = "README.md"
packages = [{include = "sky"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.2"
psycopg2 = "^2.9.5"
sqlalchemy = "^1.4.42"
beautifulsoup4 = "^4.11.1"
black = "^22.10.0"
bs4 = "^0.0.1"
django-nose = "^1.4.7"
factory-boy = "^3.2.1"
isort = "^5.10.1"
marshmallow = "^3.18.0"
parameterized = "^0.8.1"
pinocchio = "^0.4.3"
text-unidecode = "^1.3"
tomli = "^2.0.1"
typing-extensions = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
